SERVER-46009 Guard against uninitialized FCV during txns checks